# navier-stokes-fluid-sim

./: CMakeLists.txt  README.md
include/core/: Constants.h  MACCell.h  MACGrid.h  Shape.h  Solver.h
include/visual/: SDLRenderer.h
src/: main.cpp
src/core/: MACCell.cpp  MACGrid.cpp  Solver.cpp
src/visual/: SDLRenderer.cpp
